worked on rectangle

--- a/problem-set-6.html
+++ b/problem-set-6.html
@@ -23,6 +23,7 @@
       <div style="text-align: center;">
         <button onclick="sayHello()">Hello</button>
         <button onclick="example('sayHello')">Example</button>
+
       </div>
 
       <h3>OUTPUT</h3>
@@ -45,7 +46,7 @@
     <!-- EXERCISE 2: RECTANGLE -->
     <div class="exercise" id="exercise2">
       <div style="text-align: center;">
-        <button>Rectangle</button>
+        <button onclick="drawRectangle()">Rectangle</button>
         <button onclick="example('drawRectangle')">Example</button>
       </div>
 
