--- a/problem-set-6.html
+++ b/problem-set-6.html
@@ -70,7 +70,7 @@
     <!-- EXERCISE 3: COLOR -->
     <div class="exercise" id="exercise3">
       <div style="text-align: center;">
-        <button>Color</button>
+        <button onclick="drawColoredRectangle()">Color</button>
         <button onclick="example('drawColoredRectangle')">Example</button>
       </div>
 
@@ -94,7 +94,7 @@
     <!-- EXERCISE 4: TRIANGLE -->
     <div class="exercise" id="exercise4">
       <div style="text-align: center;">
-        <button>Triangle</button>
+        <button onclick="drawTriangle()">Triangle</button>
         <button onclick="example('drawTriangle')">Example</button>
       </div>
 
@@ -118,7 +118,7 @@
     <!-- EXERCISE 5: SMILE -->
     <div class="exercise" id="exercise5">
       <div style="text-align: center;">
-        <button>Smile</button>
+        <button onclick="drawSmileyFace()">Smile</button>
         <button onclick="example('drawSmileyFace')">Example</button>
       </div>
 
