--- a/problem-set-6.html
+++ b/problem-set-6.html
@@ -142,7 +142,7 @@
     <!-- EXERCISE 6: STAR -->
     <div class="exercise" id="exercise6">
       <div style="text-align: center;">
-        <button>Star</button>
+        <button onclick="drawStar()">Star</button>
         <button onclick="example('drawStar')">Example</button>
       </div>
 
@@ -214,7 +214,7 @@
     <!-- EXERCISE 9: HOUSE -->
     <div class="exercise" id="exercise9">
       <div style="text-align: center;">
-        <button>House</button>
+        <button onclick="drawHouse()">House</button>
         <button onclick="example('drawHouse')">Example</button>
       </div>
 
